# rye-sample

./: LICENSE  README.md  pyproject.toml
rye_sample/: __init__.py  main.py
