[project]
name = "rye-sample"
version = "0.1.0"
description = "Rye sample project"
dependencies = [
    "flask>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
my-hello-script = 'rye_sample:main.run_app'

[tool.rye.scripts]
format = "black ."
